Solve bug with whitespace on right side of footer (on mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
   font-family: "Open Sans";
 }
 
+html,
 body {
-  margin: 0;
+  width: 100%;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
